# AutoPCB

./: README.md
kicad-autopcb-gen/: README.md  pyproject.toml
kicad-autopcb-gen/examples/: buck_module.yaml  esp32_devboard.yaml  i2c_breakout.yaml
kicad-autopcb-gen/kicad_autopcb_gen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
kicad-autopcb-gen/pcbgen/: __init__.py  ai_layout.py  ai_spec.py  cli.py  kicad_project.py  spec.py  templates_buck.py  templates_esp32dev.py  templates_i2c.py
